<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_app_name">Live Audio Room</string>
    <string name="app_voiceroom">Voice Chat Room</string>
    <string name="app_voiceroom_desc_text">Voice chat room with 6-8 participants. Users can speak freely and talk about interesting topics.</string>
    <string name="app_listen_together_desc_text">Listen together, talk together, stay together.</string>
    <string name="app_free_trial">Free Trial</string>
    <string name="app_yes">Yes</string>
    <string name="app_no">No</string>
    <string name="app_about">About</string>
    <string name="app_app_version">App version</string>
    <string name="app_privacy_policy">Privacy Policy</string>
    <string name="app_user_agreement">Terms of Service</string>
    <string name="app_disclaimer">Disclaimer</string>
    <string name="app_logout">Log out</string>
    <string name="app_ok">Complete</string>
    <string name="app_modify_nickname">Edit</string>
    <string name="app_user_info_update_failed">Failed to update user profile</string>
    <string name="app_user_info_update_success">User profile updated</string>
    <string name="app_avatar">Avatar</string>
    <string name="app_user_info">User Profile</string>
    <string name="app_nickname">Nickname</string>
    <string name="app_user_center">User Profile</string>
    <string name="app_free_apply_trial">Request free trial</string>
    <string name="app_application">Application</string>
    <string name="app_problem_feedback">Feedback</string>
    <string name="app_data_center">Data Center:</string>
    <string name="app_data_center_mainland">China</string>
    <string name="app_data_center_oversea">Global</string>
    <string name="app_room_list_empty">No room\nClick ”+“ to create a room</string>
    <string name="app_empty_roomname_tips">The room theme cannot be empty</string>
    <string name="app_room_not_exist">Room does not exist</string>
    <string name="app_sure">Sure</string>
    <string name="app_cancel">Cancel</string>
    <string name="app_click_roomlist_tips">Exit the current room and enter other rooms</string>
    <string name="app_click_create_room_tips">Exit the current room and create a new room</string>
    <string name="app_net_error">Network connection failed. Check your network connectivity.</string>
    <string name="log_upload">Log upload</string>
    <string name="network_quality">Network quality: </string>
    <string name="quality_result">Result: </string>
    <string name="network_rtt">Round-trip time: </string>
    <string name="network_up_packet_loss_rate">Outbound packet loss rate: </string>
    <string name="network_up_jitter">Outbound network jitter: </string>
    <string name="network_up_avaliable_band_width">Outbound available bandwidth: </string>
    <string name="network_down_packet_loss_rate">Inbound packet loss rate: </string>
    <string name="network_down_jitter">Inbound network jitter: </string>
    <string name="network_down_available_band_width">Inbound available bandwidth: </string>
    <string name="network_probe">Network probe</string>
    <string name="please_wait_five_second_upload">Uploading，Please wait for 5 seconds</string>
    <string name="quality_unknown">Unknown</string>
    <string name="quality_excellent">Excellent</string>
    <string name="quality_good">User experience similar to the excellent quality with a lower bitrate</string>
    <string name="quality_poor">Poor user experience but communication still works</string>
    <string name="quality_bad">Poor communication</string>
    <string name="quality_vbad">Communication is almost unavailable</string>
    <string name="quality_down">No communication</string>
    <string name="state_result_complete">The Last-mile quality detection is complete.</string>
    <string name="state_result_incomplete_no_bwe">The Last-mile quality detection does not include bandwidth prediction. The result is incomplete. The common reason is limited resources</string>
    <string name="state_result_unavailable">No Last-mile quality detection is performed. The common reason is disconnection. </string>
    <string name="sure">OK</string>
    <string name="probing_in_progress">Probing in progress</string>
    <string name="app_voice_room">Voice chat room</string>
    <string name="app_voice_room_desc">With AI-enabled noise reduction, you\'ll experience enhanced sound quality without the mic screeching.</string>
    <string name="app_beauty_setting">Beauty settings</string>
    <string name="app_log_upload">Upload log</string>
    <string name="app_network_detect">Network probe</string>
    <string name="app_phone_consult">Support</string>
    <string name="app_common_setting">General</string>
    <string name="app_kick_out">This account is already logged in on another device. You are logged out of the device</string>
    <string name="app_account">Please fill in account</string>
    <string name="app_token">Please fill in token</string>
    <string name="sample_login_desc">CommsEase Party - Live Audio Room\nSample App</string>
    <string name="start_exploring">Start exploring</string>
    <string name="logining">logining...</string>
</resources>