<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_user_center_bg">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:padding="10dp"
        android:src="@drawable/icon_left_arrow_light"
        app:layout_constraintBottom_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title" />

    <ImageView
        android:id="@+id/iv_app_logo"
        android:layout_width="124dp"
        android:layout_height="118dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/icon_about_logo_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/app_about"
        android:textColor="@android:color/white"
        android:textSize="17dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:text="@string/app_app_version"
        android:textColor="#ffffffff"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_app_version"
        app:layout_constraintTop_toTopOf="@id/tv_app_version" />

    <TextView
        android:id="@+id/tv_app_version"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical|end"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="v3.5.0"
        android:textColor="#ccffffff"
        android:textSize="14dp"
        app:layout_constraintTop_toBottomOf="@id/iv_app_logo" />

    <TextView
        android:id="@+id/tv_privacy"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/app_privacy_policy"
        android:textColor="#ffffffff"
        android:textSize="16dp"
        app:drawableEndCompat="@drawable/icon_right_arrow_light"
        app:layout_constraintTop_toBottomOf="@id/tv_app_version" />


    <TextView
        android:id="@+id/tv_user_police"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/app_user_agreement"
        android:textColor="#ffffffff"
        android:textSize="16dp"
        app:drawableEndCompat="@drawable/icon_right_arrow_light"
        app:layout_constraintTop_toBottomOf="@id/tv_privacy" />

    <TextView
        android:id="@+id/tv_disclaimer"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/app_disclaimer"
        android:textColor="#ffffffff"
        android:textSize="16dp"
        app:drawableEndCompat="@drawable/icon_right_arrow_light"
        app:layout_constraintTop_toBottomOf="@id/tv_user_police" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#06ffffff"
        app:layout_constraintBottom_toBottomOf="@id/tv_disclaimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_privacy" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#19ffffff"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#19ffffff"
        app:layout_constraintTop_toTopOf="@id/tv_app_version" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#19ffffff"
        app:layout_constraintTop_toTopOf="@id/tv_privacy" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="20dp"
        android:background="#19ffffff"
        app:layout_constraintTop_toTopOf="@id/tv_user_police" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="20dp"
        android:background="#19ffffff"
        app:layout_constraintTop_toTopOf="@id/tv_disclaimer" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#19ffffff"
        app:layout_constraintBottom_toBottomOf="@id/tv_disclaimer" />


</androidx.constraintlayout.widget.ConstraintLayout>