<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 NetEase, Inc. All rights reserved.
  ~ Use of this source code is governed by a MIT license that can be
  ~ found in the LICENSE file.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <com.netease.yunxin.kit.entertainment.common.widget.TitleBar
        app:titleBar_title="@string/app_common_setting"
        app:titleBar_title_bg_color="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ScrollView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_eff1f4">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/bg_setting"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:orientation="vertical">

                <com.netease.yunxin.kit.entertainment.common.widget.SettingItemView
                    android:id="@+id/itemView_privacy_policy"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    app:setting_item_title="@string/app_privacy_policy" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/color_f5f8fc" />

                <com.netease.yunxin.kit.entertainment.common.widget.SettingItemView
                    android:id="@+id/itemView_user_agreement"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    app:setting_item_title="@string/app_user_agreement" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/color_f5f8fc" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/color_f5f8fc" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>