<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/cl_root"
    android:layout_height="match_parent"
    android:background="@drawable/shape_user_center_bg">

    <EditText
        android:id="@+id/et_nick_name"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:background="#06ffffff"
        android:gravity="start|center_vertical"
        android:paddingStart="20dp"
        android:singleLine="true"
        android:paddingEnd="20dp"
        android:maxLength="12"
        android:text="@string/app_logout"
        android:textColor="#ffffffff"
        android:textSize="17dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />


    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:padding="10dp"
        android:src="@drawable/icon_left_arrow_light"
        app:layout_constraintBottom_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title" />

    <ImageView
        android:id="@+id/iv_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:visibility="gone"
        android:src="@drawable/icon_edit_user_close_with_bg"
        app:layout_constraintBottom_toBottomOf="@id/et_nick_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_nick_name" />


    <TextView
        android:id="@+id/tv_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:gravity="center"
        android:text="@string/app_ok"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/app_modify_nickname"
        android:textColor="@color/colorWhite"
        android:textSize="17dp"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#33ffffff"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#19ffffff"
        app:layout_constraintTop_toTopOf="@id/et_nick_name" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#19ffffff"
        app:layout_constraintBottom_toBottomOf="@id/et_nick_name" />


</androidx.constraintlayout.widget.ConstraintLayout>