<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_user_center_bg"
    tools:context=".user.UserInfoActivity">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:padding="10dp"
        android:src="@drawable/icon_left_arrow_light"
        app:layout_constraintBottom_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title" />


    <ImageView
        android:id="@+id/iv_user_portrait"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/selector_home_user_icon"
        app:layout_constraintBottom_toBottomOf="@id/tv_user_portrait"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_user_portrait" />

    <TextView
        android:id="@+id/tv_user_portrait"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/app_avatar"
        android:textColor="#ffffffff"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center"
        android:text="@string/app_user_info"
        android:textColor="@android:color/white"
        android:textSize="17dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:gravity="center_vertical"
        android:text="@string/app_nickname"
        android:textColor="#ffffffff"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_nick_name"
        app:layout_constraintTop_toTopOf="@id/tv_nick_name" />

    <TextView
        android:id="@+id/tv_nick_name"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical|end"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="nickname"
        android:textColor="#ffffffff"
        android:textSize="14dp"
        app:layout_constraintTop_toBottomOf="@id/tv_user_portrait" />

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:background="#06ffffff"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/app_logout"
        android:textColor="#ffffffff"
        android:textSize="17dp"
        app:layout_constraintTop_toBottomOf="@id/tv_nick_name" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#19ffffff"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#06ffffff"
        app:layout_constraintBottom_toBottomOf="@id/tv_nick_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_user_portrait" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#19ffffff"
        app:layout_constraintTop_toTopOf="@id/tv_user_portrait" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="20dp"
        android:background="#19ffffff"
        app:layout_constraintTop_toTopOf="@id/tv_nick_name" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#19ffffff"
        app:layout_constraintBottom_toBottomOf="@id/tv_nick_name" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#19ffffff"
        app:layout_constraintTop_toTopOf="@id/tv_logout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#19ffffff"
        app:layout_constraintBottom_toBottomOf="@id/tv_logout" />

</androidx.constraintlayout.widget.ConstraintLayout>